Первая домашка восьмого урока второго курса - готова! Исправила! Пропустила в задании цену и вес. Домашнее задание "2", задание № 1 - выполнила) Домашнее задание "2", задание № 2 - выполнила (множество целых чисел) Исправила! Изменила на Product, а вот как в main вывести не понимаю? Добрый вечер! Исправила.